# Banking-Application

./: .gitignore  AddDependancies  AddDependancies.md  CMakeLists.txt  CMakePresets.json  README.md  Start_Development.md  UserStories.md  init_outline.md  ls  ls.pub  main.cpp  output.txt  requirement_documentation.md
.github/workflows/: daily-push.yml
Backend/: Account.cpp  Account.h  CMakeCache.txt  CMakeLists.txt  CheckingsAccount.cpp  CheckingsAccount.h  SavingsAccount.cpp  SavingsAccount.h  Transaction.cpp  Transaction.h  User.cpp  User.h  crow_all.h  dotenv.h  email.cpp  main.cpp  package.json
Backend/headers/: Account.h  CheckingsAccount.h  SavingsAccount.h  Transaction.h  User.h  asio_compat.h  firebaseConfig.h
Backend/src/: Account.cpp  CheckingsAccount.cpp  SavingsAccount.cpp  Transaction.cpp  User.cpp  firebaseConfig.cpp  main.cpp
Frontend/: .gitignore  crow_all.h  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
Frontend/config/: firebase.tsx  firebaseConfig.tsx
Frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
Frontend/src/components/: AccountDetails.tsx  BalancePage.tsx  DepositPage.tsx  TransferPage.tsx  WithdrawPage.tsx  fetchOrInitializeUserData.tsx  landingPage.tsx  login.tsx  privacyPolicy.tsx  terms.tsx
Frontend/src/config/: firebase.tsx
Frontend/src/contexts/: authContext.tsx
Frontend/styles/: accountDetails.css  balance.css  depwith.css  landingPage.css  login.css  terms.css
backend/: CMakeLists.txt  Makefile  main.cpp  vcpkg.json
bkg_x64/: package-lock.json  package.json  tsconfig.json
bkg_x64/src/: firebase.ts  index.ts
bkg_x64/src/routes/: account.ts  auth.ts
bkg_x64/src/services/: authService.ts  lockoutService.ts  userService.ts
firebase_cpp_sdk/firebase-cpp-sdk-12.6.0/scripts/gha/ui_testing/uitest_android/: gradlew.bat
frontend/: App.tsx  index.html  package-lock.json  package.json
